# emerald

./: CMakeLists.txt  FileProvider.hpp  README.md  build.sh  configuration.csv  main.cpp  prepare_build.sh  run.sh
.devcontainer/: Dockerfile
.github/workflows/: build_linux.yml  build_mac.yml  win_build.yml  wind_build.yml
sh_mem/: ProcCommunicator.cpp
web_ui/: index.html  web_client.cpp
